add: multiple lights, point light and direction light.

--- a/DrawRectangle.html
+++ b/DrawRectangle.html
@@ -10,6 +10,7 @@
 </head>
 <body onload="main()">
 <canvas id="canvas" width="600" height="600"></canvas>
+<button id="button">click</button>
 </body>
 <script src="DrawRectangle.js"></script>
 </html>
