--- a/DrawRectangle.html
+++ b/DrawRectangle.html
@@ -7,6 +7,7 @@
     <script src="lib/cuon-matrix.js"></script>
     <script src="lib/webgl-utils.js"></script>
     <script src="lib/webgl-debug.js"></script>
+    <script src="utils.js"></script>
 </head>
 <body onload="main()">
 <canvas id="canvas" width="600" height="600"></canvas>
