--- a/DrawRectangle.html
+++ b/DrawRectangle.html
@@ -7,7 +7,8 @@
     <script src="lib/cuon-matrix.js"></script>
     <script src="lib/webgl-utils.js"></script>
     <script src="lib/webgl-debug.js"></script>
-    <script src="utils.js"></script>
+    <script src="Shader.js"></script>
+    <script src="Light.js"></script>
 </head>
 <body onload="main()">
 <canvas id="canvas" width="600" height="600"></canvas>
